--- a/style.css
+++ b/style.css
@@ -23,7 +23,16 @@ button {
   color: black; 
 }
 
-button1:hover {
+.button1:hover {
+  background-color: #7affca;
+  color: white;
+}
+.button2 {
+  background-color: #7affca; 
+  color: black; 
+}
+
+.button2:hover {
   background-color: #7affca;
   color: white;
 }
